--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -27,26 +27,8 @@
 #
 #
 
-on early-init
-    exec u:r:vendor_modprobe:s0 -- /vendor/bin/modprobe -a -d /vendor/lib/modules audio_q6_pdr audio_q6_notifier audio_snd_event audio_apr audio_adsp_loader audio_q6 audio_native audio_usf audio_pinctrl_lpi audio_swr audio_swr_ctrl audio_platform audio_stub audio_wcd_core audio_lct_pinctrl audio_aw87xxx audio_wcd9xxx audio_bolero_cdc audio_va_macro audio_rx_macro audio_tx_macro audio_mbhc audio_wcd937x audio_wcd937x_slave audio_pm2250_spmi audio_rouleur audio_rouleur_slave audio_machine_bengal
-    write /proc/sys/kernel/sched_boost 1
-
 on init
-     # Setup permission for Power HAL
-    chown system system /dev/stune/top-app/schedtune.boost
-    chown system system /dev/cpu_dma_latency
-
-    chmod 0664 /dev/stune/top-app/schedtune.boost
-    chmod 0664 /dev/cpu_dma_latency
-
-    write /dev/stune/foreground/schedtune.sched_boost_no_override 1
-    write /dev/stune/top-app/schedtune.sched_boost_no_override 1
-    write /dev/stune/schedtune.colocate 0
-    write /dev/stune/background/schedtune.colocate 0
-    write /dev/stune/system-background/schedtune.colocate 0
-    write /dev/stune/foreground/schedtune.colocate 0
-    write /dev/stune/top-app/schedtune.colocate 1
-    #Moving to init as this is needed for qseecomd
+    # Moving to init as this is needed for qseecomd
     wait /dev/block/platform/soc/${ro.boot.bootdevice}
     symlink /dev/block/platform/soc/${ro.boot.bootdevice} /dev/block/bootdevice
 
@@ -62,7 +44,7 @@ on fs
     chmod 0666 /sys/class/thermal/thermal_message/temp_state
     chown system system /sys/class/thermal/thermal_message/temp_state
 
-    #audio
+    # Audio
     chmod 0644 /mnt/vendor/persist/audio/us_manual_cal
     chmod 0644 /persist/audio/us_manual_cal
 
@@ -107,7 +89,7 @@ on post-fs-data
     chown system system /sys/class/power_supply/usb/typec_cc_orientation
 
 on boot
-    #touch funtions permissions setting
+    # Touch funtions permissions setting
     chown system system /sys/class/touch/touch_dev/palm_sensor
     chmod 0664 /sys/class/touch/touch_dev/palm_sensor
 
@@ -227,8 +209,7 @@ on property:init.svc.surfaceflinger=restarting
     stop vendor.displayfeature
 
 on property:sys.boot_completed=1
-    write /proc/sys/vm/swappiness 100
-    write /sys/block/zram0/comp_algorithm lz4
+    write /proc/sys/vm/page-cluster 0
     swapon_all /vendor/etc/fstab.zram
 
 on property:ro.boot.hwversion=*
